--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "razorpay": "^2.9.6"
   }
 }
